--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medimate</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="https://kit.fontawesome.com/3d41ab5f62.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="main">
             <div class="display">
                 <a href="index.html" class="logo">
-                    <img src="images/MediMate_transparent.png" alt="Medimate Logo" width="80%" height="80%"/>
+                    <img src="/images/MediMate_transparent.png" alt="Medimate Logo" width="80%" height="80%"/>
                 </a>
                 
                 <ul class="connect">
@@ -51,7 +51,7 @@
                     </p>
                     
                     <div class="ui">
-                        <form id="authform">
+                        <form id="authform" action="/login" method="POST" >
                             <input type="text" class="input-box1" placeholder="Your email address" name="email" required>
                             <input type="password" class="input-box2" placeholder="Your password" name="password" required>
                             <button type="submit" class="btn">Login</button>
@@ -102,27 +102,27 @@
         }
 
         // Add event listener for form submission
-        document.querySelector('form').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent default form submission
+        // document.querySelector('form').addEventListener('submit', function (event) {
+        //     event.preventDefault(); // Prevent default form submission
             
-            const email = document.querySelector('.input-box1').value;
-            const password = document.querySelector('.input-box2').value;
+        //     const email = document.querySelector('.input-box1').value;
+        //     const password = document.querySelector('.input-box2').value;
 
-            fetch('http://localhost:3003/auth', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ email, password })
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert(data.message);
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        });
+        //     fetch('https://medimate-2-neyh.onrender.com', {
+        //         method: 'POST',
+        //         headers: {
+        //             'Content-Type': 'application/json'
+        //         },
+        //         body: JSON.stringify({ email, password })
+        //     })
+        //     .then(response => response.json())
+        //     .then(data => {
+        //         alert(data.message);
+        //     })
+        //     .catch(error => {
+        //         console.error('Error:', error);
+        //     });
+        // });
     </script>
 </body>
 </html>
